--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
   },
   "main": "./lib/sitespeed.js",
   "dependencies": {
-    "@google-cloud/storage": "5.19.3",
+    "@google-cloud/storage": "^6.4.2",
     "@tgwf/co2": "0.8.0",
     "aws-sdk": "2.1121.0",
     "axe-core": "4.4.3",
