--- a/package.json
+++ b/package.json
@@ -116,7 +116,7 @@
     "simplecrawler": "1.1.9",
     "tape": "5.5.3",
     "text-table": "0.2.0",
-    "uuid": "8.3.2",
+    "uuid": "^9.0.0",
     "yargs": "17.4.1"
   }
 }
